test/files/neg/t276.check
t276.scala:6: error: overriding type Bar in class Foo, which equals (Int, Int);
 class Bar cannot be used here - classes can only override abstract types
  class Bar
        ^
one error found
